--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -33,7 +33,7 @@ a:hover {
 
  .main::before {
     content: '';
-    background-image: url('assets/img/background-top.svg');
+    background-image: url('../img/background-top.svg');
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
@@ -47,7 +47,7 @@ a:hover {
 
  .main::after {
     content: '';
-    background-image: url('assets/img/background-bottom.svg');
+    background-image: url('../img/background-bottom.svg');
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
