--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -5,8 +5,7 @@
     margin: 1rem 0;
     border: 1px solid #fff;
     border-radius: 1rem;
-    transition: 0.5s;
-    
+    transition: .25s;
 }
 
 .acordeon.open,
@@ -14,8 +13,6 @@
     background-color: #55569E;
     border-color: #55569E;
 }
-
-
 
 .acordeon .trigger {
     display: flex;
@@ -41,13 +38,13 @@
 }
 
 .acordeon .trigger::after {
-    content: "";
+    content: '';
     display: inline-block;
     width: 1.5rem;
     height: 1.5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('../img/icons/arrow-top.svg");
+    background-image: url('../img/icons/arrow-top.svg');
     transition: .25s;
 }
 
@@ -59,7 +56,7 @@
     overflow: hidden;
     height: 0;
     opacity: 0;
-    transition: opacity 1s ease-in-out ;
+    transition: opacity .25s ease-in-out;
 }
 
 .acordeon.open .content {
