--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -3,33 +3,30 @@
     flex-direction: column;
     align-items: center;
     position: relative;
-
 }
 
-    .header::after {
-        content: '';
-        display: inline-block;
-        position: absolute;
-        top: 1rem;
-        right: 1rem;
-        width: 1rem;
-        height: 1rem;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-image: url('../img/icons/header.svg');
-    }
+.header::after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    width: 2rem;
+    height: 2rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('../img/icons/header.svg');
+}
 
-
-  .header .photo {
+.header .photo {
     width: 200px;
     height: 200px;
     border-radius: 50%;
-}    
+}
 
 .header .title {
-    font-family: "comic neue";
+    font-family: 'Neue Machina';
     text-align: center;
-
 }
 
 .information {
@@ -55,11 +52,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     margin-right: .5rem;
-
-
 }
-
-
 
 .information .job::before {
     background-image: url('../img/icons/job.svg');
@@ -80,10 +73,9 @@
 @media only screen and (min-width: 768px) {
     .header {
         display: grid;
-        grid-template-areas: 
-        "photo title"
-        "photo information"
-        
+        grid-template-areas:
+            "photo title"
+            "photo information"
         ;
     }
 
@@ -96,13 +88,9 @@
         grid-area: title;
         text-align: start;
         max-width: 210px;
-
     }
 
     .header .information {
         grid-area: information;
     }
-
-
-
 }
