--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,6 +1,4 @@
-
-
-.Projetos {
+.portfolio {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -8,29 +6,26 @@
     margin: 0;
     padding: 0;
     list-style: none;
-
-
 }
 
-.Projetos li {
+.portfolio li {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin: 1rem 0; 
+    margin: 1rem 0;
 }
 
-.Projetos li .title {
+.portfolio li h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-weight: 1.25rem;
+    font-size: 1.25rem;
     font-weight: 700;
     margin: 0;
     margin-bottom: .5rem;
-    
 }
 
-.Projetos li .title.github::before {
+.portfolio li h3.github::before {
     content: "";
     display: inline-block;
     width: 1rem;
@@ -40,5 +35,3 @@
     background-image: url('../img/icons/github.svg');
     margin-right: .5rem;
 }
-
-
