--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,9 +1,9 @@
-.skills{
+.skills {
     display: flex;
     flex-direction: column;
 }
 
-.skills .tools ul{
+.skills .tools ul {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -12,16 +12,15 @@
     margin: 0;
     padding: 0;
     list-style: none;
-
 }
 
-.skills .tools ul li img{
+.skills .tools ul li img {
     max-width: 50px;
-    margin: 0.5rem;
-
+    max-height: 50px;
+    margin: 0 .5rem;
 }
 
-.skills .personal ul{
+.skills .personal ul {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -29,13 +28,11 @@
     flex-wrap: wrap;
     margin: 0;
     padding: 0;
-
 }
 
-.skills .personal ul li{
+.skills .personal ul li {
     margin-left: 2rem;
-    padding: .5rem;
-
+    padding: .5rem
 }
 
 @media only screen and (min-width: 768px) {
@@ -43,5 +40,4 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
-
 }
