--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,10 +1,14 @@
 * {
-    box-sizing: border-box;
-    font-family: "Open Sans", sans-serif;
-    
-  }
-  
-  body {
+   box-sizing: border-box;
+   font-family: 'Open Sans', sans-serif;
+}
+
+@font-face {
+   font-family: 'Neue Machina';
+   src: url('../fonts/neue-machina-regular.otf');
+}
+
+body {
    background-color: #000;
    color: #fff;
 }
