--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -45,7 +45,7 @@
     background-repeat: no-repeat;
     background-size: contain;
     background-image: url('../img/icons/arrow-top.svg');
-    transition: .25s;
+    transition: 1s;
 }
 
 .acordeon.open .trigger::after {
@@ -56,7 +56,7 @@
     overflow: hidden;
     height: 0;
     opacity: 0;
-    transition: opacity .25s ease-in-out;
+    transition: opacity 1s ease-in-out;
 }
 
 .acordeon.open .content {
