--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -5,13 +5,14 @@
     margin: 1rem 0;
     border: 1px solid #fff;
     border-radius: 1rem;
-    transition: .25s;
+    transition: 1s;
 }
 
 .acordeon.open,
 .acordeon:hover {
     background-color: #55569E;
     border-color: #55569E;
+    transition: 1s;
 }
 
 .acordeon .trigger {
@@ -64,4 +65,5 @@
     padding: 0 1rem 1rem 2rem;
     height: auto;
     opacity: 1;
+    transition: 1s;
 }
