--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -5,32 +5,66 @@
     margin: 1rem 0;
     border: 1px solid #fff;
     border-radius: 1rem;
-    transition: 0.25s; /* Transição rápida original */
+    transition: 1s;
 }
 
 .acordeon.open,
 .acordeon:hover {
     background-color: #55569E;
     border-color: #55569E;
-    transition: background-color 1s, border-color 1s; /* Transição de 1 segundo ao passar o mouse */
+    transition: 1s;
 }
 
 .acordeon .trigger {
-    /* ... outras propriedades ... */
-    transition: 1s; /* Transição de 1 segundo ao passar o mouse */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 1rem 2rem;
+    background-color: transparent;
+    color: #fff;
+    border: none;
+}
+
+.acordeon .trigger h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    text-align: start;
+}
+
+.acordeon .trigger:hover {
+    cursor: pointer;
+    transition: background-color 1s, border-color 1s;
 }
 
 .acordeon .trigger::after {
-    /* ... outras propriedades ... */
-    transition: 1s; /* Transição de 1 segundo ao passar o mouse */
+    content: '';
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('../img/icons/arrow-top.svg');
+    transition: 1s;
+}
+
+.acordeon.open .trigger::after {
+    transform: rotate(180deg);
 }
 
 .acordeon .content {
-    /* ... outras propriedades ... */
-    transition: opacity 1s ease-in-out; /* Transição de 1 segundo ao passar o mouse */
+    overflow: hidden;
+    height: 0;
+    opacity: 0;
+    transition: opacity 2s ease-in-out;
 }
 
 .acordeon.open .content {
-    /* ... outras propriedades ... */
-    transition: opacity 1s ease-in-out; /* Transição de 1 segundo ao passar o mouse */
+    display: block;
+    padding: 0 1rem 1rem 2rem;
+    height: auto;
+    opacity: 1;
+    transition: 1s;
 }
