--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -10,8 +10,8 @@
 
 .acordeon.open,
 .acordeon:hover {
-    background-color: #6263c9;
-    border-color: #6263c9;
+    background-color: #7879b4;
+    border-color: #7879b4;
     transition: 1s;
 }
 
