--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -10,8 +10,8 @@
 
 .acordeon.open,
 .acordeon:hover {
-    background-color: #7ed0e9;
-    border-color: #7ed0e9;
+    background-color: #c1eaf7;
+    border-color: #c1eaf7;
     transition: 1s;
 }
 
@@ -52,6 +52,7 @@
 
 .acordeon.open .trigger::after {
     transform: rotate(180deg);
+    transition: 1s;
 }
 
 .acordeon .content {
