--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -54,6 +54,7 @@ a:hover {
    .main {
        max-width: 1024px;
        margin: 1rem auto;
+       border-radius: 50px 0px;
    }
 
    .main::before,
